# Track_Vision

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README_CN.md
config/: vision_config.json
include/: CameraCapture.h  CommProtocol.h  ConfigManager.h  LineDetector.h  SerialCommunicator.h  TrackVision.h
src/: CameraCapture.cpp  ConfigManager.cpp  LineDetector.cpp  SerialCommunicator.cpp  TrackVision.cpp  main.cpp
